@@ -3,7 +3,12 @@ Revision history for Perl module Math::Prime::Util
 
 0.46  2014-?
 
-    [OTHER]
+    [Misc]
+
+    - is_pseudoprime arguments act like is_strong_pseudoprime now.  That is,
+      it requires one or more bases.  Previously it took only one base and
+      defaulted to 2.  Since the default was not documented, this should be
+      backward-compatible.
 
     - Syntax fix from Salvatore.
 
